uaf/infer-out/report.txt
#0
uaf.c:19: error: Memory Leak
  memory dynamically allocated at line 17 by call to `malloc`, is not freed after the last access at line 19, column 5.
  17.     p = malloc(sizeof(int));
  18.     p_alias = malloc(sizeof(int));   
  19.     p = p_alias;
          ^
  20.     if (buf[0] = 'F')
  21.         bad_func();

#1
uaf.c:23: error: Use After Free
  accessing memory that was invalidated by call to `free()` on line 21 indirectly during the call to `bad_func()`.
  21.         bad_func();
  22. 	if (buf[4] = 'U')
  23.         *p = 1;
              ^
  24.     return 0;
  25. }

Found 2 issues
      Issue Type(ISSUED_TYPE_ID): #
  Use After Free(USE_AFTER_FREE): 1
        Memory Leak(MEMORY_LEAK): 1
